src/services/aspnetcore-webapi/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aspnetcoreapp-svc
  labels:
    app: aspnetcoreapp
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: aspnetcoreapp
